add save in db automaticRecipe and hidden key

--- a/BackEnd-FitWell/src/main/resources/application.properties
+++ b/BackEnd-FitWell/src/main/resources/application.properties
@@ -15,3 +15,6 @@ jwt.secret=${JWT_SECRET}
 
 mailgun.apikey=${MAILGUN_API_KEY}
 mailgun.domain=${MAILGUN_DOMAIN}
+
+access.token.fatsecret=${ACCESS_TOKEN_FATSECRET}
+x.api.key=${X_API_KEY}
